[package]
name = "gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3.57"
terrain = { path = "../terrain" }
serde = { version = "1.0.137", default-features = true, features = ["derive"] }
wasm-bindgen = "0.2.81"
ndarray = "0.15.4"
nalgebra = "0.31.0"
lazy_static = "1.4.0"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'NodeList',
  'CssStyleDeclaration',
  'HtmlCanvasElement',
  'HtmlInputElement',
  'WebGlBuffer',
  'WebGlVertexArrayObject',
  'WebGl2RenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'WebGlUniformLocation',
  'Window',
  'Event',
  'PointerEvent',
  'console'
]
